<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_appid">556904657667865</string>
    <string name="cinepox">씨네폭스</string>
    <string name="cineplayer">씨네폭스 플레이어</string>
    <string name="qrplay">씨네폭스 QR Play!</string>
    <string name="login_success">로그인에 성공했습니다!</string>
    <string name="query">검색어</string>
    <string name="error">오류</string>
    <string name="need_adult_confirm">성인인증 후 이용하실 수 있습니다.</string>
    <string name="find_account">찾기</string>
    <string name="notseeday">일동안 안보기</string>
    <string name="join_agree">SNS계정으로 회원가입을 위해 약관에 동의해 주셔야 합니다.</string>
    <string name="logout_success">로그아웃 되었습니다.</string>
    <string name="noti_logout">로그아웃 하시겠습니까? 로그아웃 하시면 자동로그인 설정은 해제됩니다.</string>
    <string name="readytoresponse">응답을 기다리는 중입니다&#8230;</string>
    <string name="loading">정보를 가져오는 중입니다&#8230;</string>
    <string name="normal">일반</string>
    <string name="done">확인</string>
    <string name="finish">종료</string>
    <string name="user_grade">회원등급</string>
    <string name="popcorn">팝콘</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="sla">님</string>
    <string name="rating">평점</string>
    <string name="detail">자세히</string>
    <string name="share">공유하기</string>
    <string name="question">문의하기</string>
    <string name="top100">실시간 TOP100</string>
    <string name="reply">댓글 쓰기</string>
    <string name="view_expand">더보기 ▼</string>
    <string name="view_collapse">접기 ▲</string>
    <string name="backtoexit">뒤로가기를 한번 더 누르시면 종료됩니다.</string>
    <string name="movielist_recent">최신영화</string>
    <string name="movielist_update">업데이트</string>
    <string name="movielist_category">카테고리 선택</string>
    <string name="moviedetail_order_all">전체보기</string>
    <string name="moviedetail_order_desc">내림차순▼</string>
    <string name="moviedetail_order_asc">오름차순▲</string>
    <string name="moviedetail_related_item">관련영화</string>
    <string name="moviedetail_stillcut">스틸컷</string>
    <string name="moviedetail_synopsis">시놉시스</string>
    <string name="moviedetail_snsreply_desc">댓글을 작성해 주세요</string>
    <string name="moviedetail_help_desc">상품문의 및 상담, 오류신고는 문의하기 버튼을 이용해 주세요.</string>
    <string name="version_update">최신 버전이 아닙니다. 업데이트를 해 주세요.</string>
    <string name="version_recent">최신 버전입니다.</string>
    <string name="version_target">현재버전</string>
    <string name="version_current">최신버전</string>
    <string name="main_cinepox_login">로그인 &amp; 회원가입이 필요한 고객님은 클릭해 주세요.</string>
    <string name="main_sns_login">SNS로그인</string>
    <string name="main_sns_login_desc">회원가입 없이 간단한 SNS로그인 하세요.</string>
    <string name="home_snsreview">SNS리뷰</string>
    <string name="home_event">이벤트</string>
    <string name="home_recommend">추천 영상</string>
    <string name="sidemenu_continue">영상 이어보기</string>
    <string name="sidemenu_zzim">찜목록</string>
    <string name="sidemenu_viewlog">관람목록</string>
    <string name="sidemenu_useinfo">이용정보</string>
    <string name="sidemenu_buy">구매하기</string>
    <string name="sidemenu_event">이벤트</string>
    <string name="sidemenu_help">고객센터</string>
    <string name="sidemenu_version">버전정보</string>
    <string name="ticket_premium_auto">무제한 전용관 정기결제 이용권</string>
    <string name="ticket_premium">무제한 전용관 이용권 (1개월)</string>
    <string name="ticket_none">이용중인 티켓이 없습니다.</string>
    <string name="update">업데이트</string>
    <string name="normal_movie">일반영화</string>
    <string name="adult_movie">성인영화</string>
    <string name="recent">최신</string>
    <string name="recent_movie">최신영화</string>
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_id">아이디</string>
    <string name="mypage_edit_profile_img">사진변경</string>
    <string name="mypage_nick">닉네임</string>
    <string name="mypage_useinfo">이용정보</string>
    <string name="mypage_profileedit">정보변경</string>
    <string name="mypage_passwordedit">비밀번호\n변경</string>
    <string name="mypage_point">포인트</string>
    <string name="message">메시지</string>
    <string name="message_detail">쪽지함</string>
    <string name="mypage_popcorn">팝콘</string>
    <string name="mypage_autologin">자동로그인</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_leave">회원탈퇴</string>
    <string name="mypage_transmoney">환전하기</string>
    <string name="mypage_viewpointhistory">내역보기</string>
    <string name="mypage_nick_description">※ 닉네임을 등록하지 않을 경우 아이디가 닉네임으로 사용됩니다.</string>
    <string name="login_title">로그인 / 회원가입</string>
    <string name="login_special_character">특수문자</string>
    <string name="login_special_character_disable">특수문자숨김</string>
    <string name="login_hangulposition">영타한글보기</string>
    <string name="login_hangulposition_disable">영타한글숨김</string>
    <string name="login_id">아이디</string>
    <string name="login_pass">비밀번호</string>
    <string name="login_auto">  자동 로그인</string>
    <string name="login_autologining">자동 로그인 사용중입니다.</string>
    <string name="login_nonautologin">자동 로그인 사용중이 아닙니다.</string>
    <string name="login">로그인</string>
    <string name="login_missedid">아이디&amp;비밀번호를 잊으셨나요?</string>
    <string name="login_cinepox_join_1">씨네폭스 얼른 가입하려면!!!!</string>
    <string name="login_cinepox_join_2">한번 가입으로 모바일과 웹을 동시에 사용할 수 있습니다.</string>
    <string name="login_autologin_enable">자동 로그인 중입니다.</string>
    <string name="login_autologin_disable">자동 로그인 중이 아닙니다.</string>
    <string name="confirm_adult">성인인증이 필요한 컨텐츠입니다.</string> 
    
    <string name="movielist_sort_method">최신</string>
    <string name="movielist_sort_country">국가전체</string>
    <string name="movielist_sort_point">전체가격</string>
    <string name="movielist_sort_category">카테고리전체</string>
    
    <string name="movielist_sort_movie">영화전체</string>
    <string name="movielist_sort_adult">성인전체</string>

</resources>