<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/img_cinepox" />

        <ImageButton
            android:id="@+id/bt_login_cinepox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/bt_login_cinepox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:maxLines="1"
            android:text="@string/main_cinepox_login"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:maxLines="1"
            android:text="@string/main_sns_login"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:text="@string/main_sns_login_desc"
            android:textColor="#000000"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/bt_login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/bt_login_facebook" />

        <ImageButton
            android:id="@+id/bt_login_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/bt_login_twitter" />

        <ImageButton
            android:id="@+id/bt_login_me2day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/bt_login_me2day" />

        <ImageButton
            android:id="@+id/bt_login_yozm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/bt_login_yozm" />
    </LinearLayout>

</ScrollView>